--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@ body{
     margin: 0;
     padding: 0;
 }
-.main-bg {
+/* .main-bg {
   background-image: url(../image/home-bg.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
   width: 100%;
-}
+} */
 
