--- a/src/components/StarsBackground.css
+++ b/src/components/StarsBackground.css
@@ -1,8 +1,11 @@
 #stars-background {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
   overflow: hidden;
+  z-index: -1;
 }
 
 .star {
