--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,10 +1,10 @@
 .main-bg {
-  background-color: rgb(40, 29, 73);
-
+  background-color: #161025;
   top: 0;
   left: 0;
   height: 100vh;
   width: 100%;
+  z-index: 0;
 }
 .contact {
   position: relative;
