--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,4 +1,4 @@
-.main-bg {
+.main-bg-prj {
   background-color: #161025;
   top: 0;
   left: 0;
@@ -6,6 +6,7 @@
   width: 100%;
   z-index: 0;
   position: relative;
+  font-family: "Fira Code", monospace;
 }
 .prj-heading {
   color: white;
