--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -43,6 +43,7 @@
   min-height: 400px;
   border-radius: 10px;
 
+  -webkit-backdrop-filter: blur(1px); /* blur background behind */
   backdrop-filter: blur(1px); /* blur background behind */
   border-radius: 12px;
   padding: 2rem;
@@ -93,4 +94,4 @@
     gap: 30px;
     justify-items: center;
   }
-}
+}    
