--- a/src/components/About.css
+++ b/src/components/About.css
@@ -24,12 +24,12 @@
   width: 100%;
   box-sizing: border-box;
 }
-.about h2 {
+.about-me-title {
   margin-bottom: 70px;
   margin-top: 20px;
   font-family: "Fira Code", monospace;
   font-size: 2.5rem;
-  font-weight: 800;
+  font-weight: 550;
   color: white;
   text-shadow: 0 0 10px rgba(138, 43, 226, 0.5);
 }
