--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,14 @@ body{
 ::-webkit-scrollbar-thumb:horizontal:hover {
   background: #8a2be2;
 }
+.app-layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.app-main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
